objects/hed__Facility__c.object
<CustomObject>
    <description>A school property asset. For example, a classroom, lecture hall, or laboratory.</description>
    <label>Facility</label>
    <nameField>
        <label>Facility Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Facilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Display_Name__c</fullName>
        <description>A name that combines Parent Name (Thurgood Marshall Tower) and Facility Name (Room 400), for example, Thurgood Marshall Tower - Room 400. If no Parent Facility, Account value is used. If also no Account, Facility Name and Display Name are the same.</description>
        <formula>IF(
    NOT(ISBLANK(hed__Parent_Facility__c)), hed__Parent_Facility__r.Name + &apos; - &apos; + Name,
    IF(
        NOT(ISBLANK(hed__Account__c)), hed__Account__r.Name + &apos; - &apos; + Name, 
        Name
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>A name that combines Parent Name (Thurgood Marshall Tower) and Facility Name (Room 400), for example, Thurgood Marshall Tower - Room 400. If no Parent Facility, Account value is used. If also no Account, Facility Name and Display Name are the same.</inlineHelpText>
        <label>Display Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The organization responsible for this Facility, for example, a University Department.</description>
        <inlineHelpText>The organization responsible for this Facility, for example, a University Department.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Facilities</relationshipLabel>
        <relationshipName>Facilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Capacity__c</fullName>
        <description>The maximum number of occupants the Facility can hold.</description>
        <inlineHelpText>The maximum number of occupants the Facility can hold.</inlineHelpText>
        <label>Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hed__Description__c</fullName>
        <description>A description of this Facility.</description>
        <inlineHelpText>A description of this Facility.</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__Facility_Type__c</fullName>
        <description>Select the type of Facility this is, for example, a computer lab, health center, lecture hall, etc.</description>
        <inlineHelpText>Select the type of Facility this is, for example, a computer lab, health center, lecture hall, etc.</inlineHelpText>
        <label>Facility Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Building</fullName>
                </value>
                <value>
                    <fullName>Cafeteria/Food Hall</fullName>
                </value>
                <value>
                    <fullName>Classroom</fullName>
                </value>
                <value>
                    <fullName>Computer Lab</fullName>
                </value>
                <value>
                    <fullName>Gymnasium</fullName>
                </value>
                <value>
                    <fullName>Health Center</fullName>
                </value>
                <value>
                    <fullName>Laboratory</fullName>
                </value>
                <value>
                    <fullName>Lecture Hall</fullName>
                </value>
                <value>
                    <fullName>Library</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Parent_Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Optionally indicates the Facility that this one is a part of. For example, if this Facility is a classroom, the Parent Facility would be the building this classroom is in.</description>
        <inlineHelpText>Optionally indicates the Facility that this one is a part of. For example, if this Facility is a classroom, the Parent Facility would be the building this classroom is in.</inlineHelpText>
        <label>Parent Facility</label>
        <referenceTo>hed__Facility__c</referenceTo>
        <relationshipLabel>Facilities</relationshipLabel>
        <relationshipName>Facilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>hed__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>